src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/WGLNVSwapGroup_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/WGLNVSwapGroup_StringErrorContext.class */
public final class WGLNVSwapGroup_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("wglJoinSwapGroupNV(JI)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVSwapGroupErrorContext");
        methods.put("wglBindSwapBarrierNV(II)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVSwapGroupErrorContext");
        methods.put("nwglQuerySwapGroupNV(JJJ)I", "net/labymod/core/laby3d/opengl/error/generated/WGLNVSwapGroupErrorContext");
        methods.put("wglQuerySwapGroupNV(JLjava/nio/IntBuffer;Ljava/nio/IntBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVSwapGroupErrorContext");
        methods.put("nwglQueryMaxSwapGroupsNV(JJJ)I", "net/labymod/core/laby3d/opengl/error/generated/WGLNVSwapGroupErrorContext");
        methods.put("wglQueryMaxSwapGroupsNV(JLjava/nio/IntBuffer;Ljava/nio/IntBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVSwapGroupErrorContext");
        methods.put("nwglQueryFrameCountNV(JJ)I", "net/labymod/core/laby3d/opengl/error/generated/WGLNVSwapGroupErrorContext");
        methods.put("wglQueryFrameCountNV(JLjava/nio/IntBuffer;)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVSwapGroupErrorContext");
        methods.put("wglResetFrameCountNV(J)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVSwapGroupErrorContext");
        methods.put("wglQuerySwapGroupNV(J[I[I)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVSwapGroupErrorContext");
        methods.put("wglQueryMaxSwapGroupsNV(J[I[I)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVSwapGroupErrorContext");
        methods.put("wglQueryFrameCountNV(J[I)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLNVSwapGroupErrorContext");
        return methods;
    }
}
